tests/paczka1/fuzzy1/61811409.err
Error in line 19: jejFK35 S676 15,2
Error in line 20: s7a S950 18,1
Error in line 33: s7a S676 58,6
